--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btnAction {
+    @apply opacity-70 rounded transition-all hover:bg-gray-200 hover:opacity-100;
+  }
+}
