--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     @apply opacity-70 rounded transition-all hover:bg-gray-200 hover:opacity-100;
   }
 
+  .btnAction:disabled {
+    @apply opacity-40 hover:bg-transparent;
+  }
+
   [data-grabbing="true"],
   [data-grabbing="true"] * {
     cursor: grabbing;
