Add click event for uml elements

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
     @apply cursor-copy;
   }
 
+  [data-click-event="element"] * {
+    @apply cursor-crosshair;
+  }
+
   .isDownloading .javaClass {
     @apply border-2 border-gray-400;
   }
