Change editor layout
-Top bar: main editor actions
-Right bar: uml elements editor
-Bottom bar: secondary actions
-Left bar: generic actions

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --top-bar: 48px;
+    --bottom-bar: 36px;
+    --left-bar-tabs: 48px;
+    --left-bar-panel: 220px;
+    --right-bar: 320px;
+  }
   button {
     @apply outline-none;
   }
